[package]
name = "geyser-grpc-test"
version = "0.1.0"
edition = "2021"
default-run = "geyser-grpc-test"

[[bin]]
name = "geyser-grpc-test"
path = "src/main.rs"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
yellowstone-grpc-proto = "8.0"
yellowstone-grpc-client = "8.0"
solana-sdk = "2.0"
futures = "0.3"
